unpackaged/main/default/objects/SBQQ__Quote__c/fields/CAPEX_Refurb_Total__c.field-meta.xml
<CustomField>
    <fullName>CAPEX_Refurb_Total__c</fullName>
    <description>Total cost of quote lines where Cost Type = Refurb. Populate by Price Rule &amp; Summary Variable.</description>
    <inlineHelpText>Total amount of Refurb CAPEX on this quote.</inlineHelpText>
    <label>CAPEX - Refurb Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>