unpackaged/main/default/objects/SBQQ__Quote__c/fields/CAPEX_Required__c.field-meta.xml
<CustomField>
    <fullName>CAPEX_Required__c</fullName>
    <description>Reads the value of New CAPEX Value required and returns Yes if the value is greater than $0</description>
    <formula>IF( New_CAPEX_Value_Required__c &gt; 0, "Yes", "No")</formula>
    <inlineHelpText>Reads the value of New CAPEX Value required and returns Yes if the value is greater than $0</inlineHelpText>
    <label>CAPEX Required?</label>
    <type>Text</type>
</CustomField>