unpackaged/main/default/objects/SBQQ__Quote__c/fields/CAPEX_Total__c.field-meta.xml
<CustomField>
    <fullName>CAPEX_Total__c</fullName>
    <description>Total amount of CAPEX on this quote. Set via Price Rule &amp; Summary Variable</description>
    <inlineHelpText>Total amount of CAPEX on this quote</inlineHelpText>
    <label>CAPEX - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>