unpackaged/main/default/objects/SBQQ__Quote__c/fields/Capitalized_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Capitalized_Transportation__c</fullName>
    <label>Capitalized Transportation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>