unpackaged/main/default/objects/SBQQ__Quote__c/fields/CD__c.field-meta.xml
<CustomField>
    <fullName>CD__c</fullName>
    <description>To be used for sending Bid Sheet to BD Temp folder</description>
    <formula>'BD+Temp'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Destination</label>
    <type>Text</type>
</CustomField>