unpackaged/main/default/objects/SBQQ__Quote__c/fields/Change_of_Major_Scope__c.field-meta.xml
<CustomField>
    <fullName>Change_of_Major_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change of Major Scope</label>
    <type>Checkbox</type>
</CustomField>