unpackaged/main/default/objects/SBQQ__Quote__c/fields/Change_Orders_Approved__c.field-meta.xml
<CustomField>
    <fullName>Change_Orders_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Orders Approved</label>
    <type>Checkbox</type>
</CustomField>