unpackaged/main/default/objects/SBQQ__Quote__c/fields/CL_Martin_C_Number__c.field-meta.xml
<CustomField>
    <fullName>CL_Martin_C_Number__c</fullName>
    <description>C Number to be used for CLM Templates</description>
    <formula>'C-'&amp;""&amp;MID(Name, 3, LEN(Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CL Martin C Number</label>
    <type>Text</type>
</CustomField>