unpackaged/main/default/objects/SBQQ__Quote__c/fields/Clone_External_Lines__c.field-meta.xml
<CustomField>
    <fullName>Clone_External_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clone External Lines</label>
    <type>Checkbox</type>
</CustomField>