unpackaged/main/default/objects/SBQQ__Quote__c/fields/Collect_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Collect_Security_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect Security Deposit</label>
    <type>Checkbox</type>
</CustomField>