unpackaged/main/default/objects/SBQQ__Quote__c/fields/Commitment_Term_Days__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Term_Days__c</fullName>
    <description>For ES, the number of Days a rental is committed to a project. For Camps, the min. number of Days a rental will be billed on a project. For Lodging, the number of Resident Days we are offering at a given price.</description>
    <inlineHelpText>For ES, the number of Days a rental is committed to a project. For Camps, the min. number of Days a rental will be billed on a project. For Lodging, the number of Resident Days we are offering at a given price.</inlineHelpText>
    <label>Commitment Term (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>