unpackaged/main/default/objects/SBQQ__Quote__c/fields/Committed__c.field-meta.xml
<CustomField>
    <fullName>Committed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate this Quote is for a Committed term/amount.</description>
    <inlineHelpText>Indicates this Quote is for a Committed term/amount.</inlineHelpText>
    <label>Committed</label>
    <type>Checkbox</type>
</CustomField>