unpackaged/main/default/objects/SBQQ__Quote__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>For use on Contract Templates
Deprecated - replaced by Contract # on Opportunity instead</description>
    <formula>SBQQ__Opportunity2__r.Contract_Number__c</formula>
    <inlineHelpText>For use on Contract Templates - Same as Contract Number on the Opportunity</inlineHelpText>
    <label>Contract Number</label>
    <type>Text</type>
</CustomField>