unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cost_of_Delivery_and_Return__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Delivery_and_Return__c</fullName>
    <label>Cost of Delivery and Return</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>