unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cost_of_Installation_and_Dismantle__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Installation_and_Dismantle__c</fullName>
    <label>Cost of Installation and Dismantle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>