unpackaged/main/default/objects/SBQQ__Quote__c/fields/CTG__c.field-meta.xml
<CustomField>
    <fullName>CTG__c</fullName>
    <description>Uses the Branch or Indigenous Partnership to determine the conga templates to use</description>
    <formula>IF(  
    OR(
       ISBLANK(SBQQ__Opportunity2__r.Indigenous_Partnership__c),
       ISBLANK(SBQQ__Opportunity2__r.Indigenous_Partnership__r.Template_Group__c)  
       ),
   SBQQ__Opportunity2__r.Branch_Name__r.Conga_Template_Group__c , LEFT(SBQQ__Opportunity2__r.Branch_Name__r.Conga_Template_Group__c, 1)+ SBQQ__Opportunity2__r.Indigenous_Partnership__r.Template_Group__c )</formula>
    <inlineHelpText>Uses the Branch or Indigenous Partnership to determine the conga templates to use</inlineHelpText>
    <label>Conga Template Group</label>
    <type>Text</type>
</CustomField>