unpackaged/main/default/objects/SBQQ__Quote__c/fields/Days_in_Month__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Month__c</fullName>
    <defaultValue>30.4</defaultValue>
    <description>Used to indicate the number of billable days (default is 30.4 to allow monthly billing). Combines with Term to calculate Net Total for a given product.</description>
    <inlineHelpText>Used to prorate eligible products by days (default is 30.4). For WFS, combined with Term.</inlineHelpText>
    <label>Billable Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>