unpackaged/main/default/objects/SBQQ__Quote__c/fields/DefaultSalesRepId__c.field-meta.xml
<CustomField>
    <fullName>DefaultSalesRepId__c</fullName>
    <description>Sets the Sales Rep field on the Quote by default
https://community.steelbrick.com/t5/Get-Started-Knowledge-Base/Customizing-Default-Quote-Sales-Rep/ta-p/215</description>
    <formula>SBQQ__Opportunity2__r.Sales_Rep__r.Id</formula>
    <label>DefaultSalesRepId</label>
    <type>Text</type>
</CustomField>