unpackaged/main/default/objects/SBQQ__Quote__c/fields/Delivery_Costs_L__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Costs_L__c</fullName>
    <label>Delivery Costs (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>