unpackaged/main/default/objects/SBQQ__Quote__c/fields/Display_Message_on_Lease_Analysis_Screen__c.field-meta.xml
<CustomField>
    <fullName>Display_Message_on_Lease_Analysis_Screen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Message on Lease Analysis Screen</label>
    <type>Checkbox</type>
</CustomField>