unpackaged/main/default/objects/SBQQ__Quote__c/fields/DWS_Building_Cost__c.field-meta.xml
<CustomField>
    <fullName>DWS_Building_Cost__c</fullName>
    <label>DWS Building Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>