unpackaged/main/default/objects/SBQQ__Quote__c/fields/DWS_Building_Makup__c.field-meta.xml
<CustomField>
    <fullName>DWS_Building_Makup__c</fullName>
    <label>DWS Building Makup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>