unpackaged/main/default/objects/SBQQ__Quote__c/fields/DWS_Building_Sell__c.field-meta.xml
<CustomField>
    <fullName>DWS_Building_Sell__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DWS Building Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>