unpackaged/main/default/objects/SBQQ__Quote__c/fields/DWS_File_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>DWS_File_Last_Sync__c</fullName>
    <label>DWS File Last Sync</label>
    <type>DateTime</type>
</CustomField>