unpackaged/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <description>Used to conditionally set the field set used by the Quote Line Editor (The fields that are displayed to the sales rep when completing the quote)</description>
    <formula>CASE(TEXT(Transaction_Type__c),
         "Sale", IF( Sale_Analysis__c,"Sale_Analysis","Sale_Line_Editor"),
         "Disaster", "DR_Line_Editor",
         "Lodging", "LG_Line_Editor",
         "Rental", 

IF( French_Quote__c  = TRUE , "French_Line_Editor", 
   IF(TEXT(CurrencyIsoCode) = "Australian Dollar", "AU_Line_Editor", 
     IF( OR( RecordType.DeveloperName = "ES", RecordType.DeveloperName = "BD_ES"), "ES_Line_Editor", 
        IF( RecordType.DeveloperName = "BD_WF", "WF_Line_Editor",
           IF( Lease_Analysis__c,"Lease_Analysis","SBQQ__LineEditor")
          ) 
       )
     )
   ),"SBQQ__LineEditor"
)</formula>
    <inlineHelpText>Used to conditionally set the field set used by the Quote Line Editor (The fields that are displayed to the sales rep when completing the quote)</inlineHelpText>
    <label>Edit Lines Field Set Name</label>
    <type>Text</type>
</CustomField>