unpackaged/main/default/objects/SBQQ__Quote__c/fields/Final_Infleet_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Infleet_List_Price__c</fullName>
    <label>Final Infleet List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>