unpackaged/main/default/objects/SBQQ__Quote__c/fields/Final_Infleet_ROA__c.field-meta.xml
<CustomField>
    <fullName>Final_Infleet_ROA__c</fullName>
    <formula>(((Monthly_Payment_for_Infleet_Units__c*12)/(In_Fleet_Capped_Costs_L__c)))</formula>
    <label>Final Infleet ROA%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>