unpackaged/main/default/objects/SBQQ__Quote__c/fields/Final_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_List_Price__c</fullName>
    <formula>Final_Infleet_List_Price__c +  Final_New_Unit_List_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>