unpackaged/main/default/objects/SBQQ__Quote__c/fields/Final_New_Unit_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_New_Unit_Selling_Price__c</fullName>
    <label>Final New Unit Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>