unpackaged/main/default/objects/SBQQ__Quote__c/fields/Final_Upfront_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Upfront_Selling_Price__c</fullName>
    <formula>(Upfront_Project_Costs_S__c *   Upfront_Markup_S__c  ) + Upfront_Project_Costs_S__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Upfront Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>