unpackaged/main/default/objects/SBQQ__Quote__c/fields/Fleet_Central_Link__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Central_Link__c</fullName>
    <description>Generates URL for Fleet Central Documents</description>
    <formula>IF(ISBLANK(SBQQ__Opportunity2__r.Fleet_Central_Contract_Number__c),

IF( SBQQ__Opportunity2__r.Create_Project__c = TRUE, HYPERLINK("https://bdgl.sharepoint.com/sites/fc/BD%20Documents/" &amp;  Contract_Number__c, "Fleet Central Documents", "_blank"), HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/Projects.aspx", "Fleet Central Documents", "_blank")),

IF( SBQQ__Opportunity2__r.Create_Project__c = TRUE, HYPERLINK("https://bdgl.sharepoint.com/sites/fc/BD%20Documents/" &amp;SBQQ__Opportunity2__r.Fleet_Central_Contract_Number__c, "Fleet Central Documents", "_blank"), HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/Projects.aspx", "Fleet Central Documents", "_blank"))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to Fleet Central Document Library for this Quote</inlineHelpText>
    <label>Fleet Central Documents</label>
    <type>Text</type>
</CustomField>