unpackaged/main/default/objects/SBQQ__Quote__c/fields/Fleet_Central_Project_Link__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Central_Project_Link__c</fullName>
    <description>Generates URL for Fleet Central Project</description>
    <formula>IF(ISBLANK(SBQQ__Opportunity2__r.Fleet_Central_Contract_Number__c),

IF( SBQQ__Opportunity2__r.Create_Project__c = TRUE, HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/ProjectLauncher.aspx?BDGLContract=" &amp; SBQQ__Opportunity2__r.Contract_Number__c , "Fleet Central Project", "_blank"), HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/Projects.aspx", "Fleet Central Project", "_blank")),

IF( SBQQ__Opportunity2__r.Create_Project__c = TRUE, HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/ProjectLauncher.aspx?BDGLContract=" &amp; SBQQ__Opportunity2__r.Fleet_Central_Contract_Number__c , "Fleet Central Project", "_blank"), HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/Projects.aspx", "Fleet Central Project", "_blank"))

)</formula>
    <inlineHelpText>Link to Fleet Central Project for this Quote</inlineHelpText>
    <label>Fleet Central Project</label>
    <type>Text</type>
</CustomField>