unpackaged/main/default/objects/SBQQ__Quote__c/fields/Forth_Payment__c.field-meta.xml
<CustomField>
    <fullName>Forth_Payment__c</fullName>
    <formula>Percentage_of_Purchase_Price_4__c * SBQQ__NetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forth Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>