unpackaged/main/default/objects/SBQQ__Quote__c/fields/French_Quote__c.field-meta.xml
<CustomField>
    <fullName>French_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If French product descriptions are needed, check this box</description>
    <inlineHelpText>If French product descriptions are needed, check this box</inlineHelpText>
    <label>French Quote</label>
    <type>Checkbox</type>
</CustomField>