unpackaged/main/default/objects/SBQQ__Quote__c/fields/GM_Designated_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>GM_Designated_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GM Designated Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes4</relationshipName>
    <type>Lookup</type>
</CustomField>