unpackaged/main/default/objects/SBQQ__Quote__c/fields/Has_Change_Orders__c.field-meta.xml
<CustomField>
    <fullName>Has_Change_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Change Orders</label>
    <type>Checkbox</type>
</CustomField>