unpackaged/main/default/objects/SBQQ__Quote__c/fields/Has_Refurbishments__c.field-meta.xml
<CustomField>
    <fullName>Has_Refurbishments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Refurbishments</label>
    <type>Checkbox</type>
</CustomField>