unpackaged/main/default/objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <formula>IF( OR(Record_Type_Name__c = 'BOXX',Record_Type_Name__c  = 'BD Modular'),
CASE(TEXT(Transaction_Type__c),
"Rental","Lease_Analysis",
"Sale" ,"Sale_Analysis",
"SBQQ__LineEditor"),
"SBQQ__LineEditor"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeaderFieldSetName</label>
    <type>Text</type>
</CustomField>