unpackaged/main/default/objects/SBQQ__Quote__c/fields/Highest_Add_Disc__c.field-meta.xml
<CustomField>
    <fullName>Highest_Add_Disc__c</fullName>
    <description>Highest entered discount. &gt;$0 requires Approver I.</description>
    <inlineHelpText>Highest entered discount. &gt;$0 requires Approver I.</inlineHelpText>
    <label>Highest Additional Disc</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__AdditionalDiscount__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Trans_Category__c</field>
        <operation>equals</operation>
        <value>Rental, Carry On</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Bundled__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>