unpackaged/main/default/objects/SBQQ__Quote__c/fields/Highest_Asset_Age__c.field-meta.xml
<CustomField>
    <fullName>Highest_Asset_Age__c</fullName>
    <label>Highest Asset Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>