unpackaged/main/default/objects/SBQQ__Quote__c/fields/In_Fleet_Capped_Costs_L__c.field-meta.xml
<CustomField>
    <fullName>In_Fleet_Capped_Costs_L__c</fullName>
    <label>In-Fleet Capped Costs (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>