unpackaged/main/default/objects/SBQQ__Quote__c/fields/Infleet_Building_Costs__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Building_Costs__c</fullName>
    <formula>IF(OR(ISBLANK(In_Fleet_Capped_Costs_L__c ), In_Fleet_Capped_Costs_L__c =0), In_fleet_Capped_Costs_S__c ,In_Fleet_Capped_Costs_L__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Infleet Building Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>