unpackaged/main/default/objects/SBQQ__Quote__c/fields/Infleet_Building_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Building_Vendors__c</fullName>
    <label>Infleet Building Vendors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>