unpackaged/main/default/objects/SBQQ__Quote__c/fields/Infleet_Factor_1__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Factor_1__c</fullName>
    <label>Infleet Factor 1</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>