unpackaged/main/default/objects/SBQQ__Quote__c/fields/Infleet_Factor_Selected__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Factor_Selected__c</fullName>
    <formula>CASE( To_be_entered_into_pipeline__c ,
'Term 1',Infleet_Factor_1__c ,
'Term 2',Infleet_Factor_2__c,
'Term 3',Infleet_Factor_3__c,
'Term 4',Infleet_Factor_4__c,
'Term 5',Infleet_Factor_5__c,
0
)</formula>
    <label>Infleet Factor Selected</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>