unpackaged/main/default/objects/SBQQ__Quote__c/fields/Infleet_List_Prices_2__c.field-meta.xml
<CustomField>
    <fullName>Infleet_List_Prices_2__c</fullName>
    <label>Infleet List Prices 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>