unpackaged/main/default/objects/SBQQ__Quote__c/fields/Infleet_ROA_3__c.field-meta.xml
<CustomField>
    <fullName>Infleet_ROA_3__c</fullName>
    <label>Infleet ROA 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>