unpackaged/main/default/objects/SBQQ__Quote__c/fields/Infleet_Selling_Price_3__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Selling_Price_3__c</fullName>
    <label>Infleet Selling Price 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>