unpackaged/main/default/objects/SBQQ__Quote__c/fields/IPS_File_Name__c.field-meta.xml
<CustomField>
    <fullName>IPS_File_Name__c</fullName>
    <description>Populated by API, showing filename of last IPS template synced</description>
    <inlineHelpText>Populated by API, showing filename of last IPS template synced</inlineHelpText>
    <label>IPS File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>