unpackaged/main/default/objects/SBQQ__Quote__c/fields/IPS_Link__c.field-meta.xml
<CustomField>
    <fullName>IPS_Link__c</fullName>
    <description>Generates URL for IPS Document</description>
    <formula>IF( IPS_URL__c = NULL, "", HYPERLINK( IPS_URL__c, "DWS/MP IPS/Bid Sheet", "_blank"))</formula>
    <inlineHelpText>Link to IPS Document</inlineHelpText>
    <label>DWS/MP IPS/Bid Sheet</label>
    <type>Text</type>
</CustomField>