unpackaged/main/default/objects/SBQQ__Quote__c/fields/IPS_URL__c.field-meta.xml
<CustomField>
    <fullName>IPS_URL__c</fullName>
    <description>Populated with API. Holds URL to IPS document. Used by IPS_Link__c formula field to show conditionally.</description>
    <inlineHelpText>Populated with API. Holds URL to IPS document for IPS_Link__c formula.</inlineHelpText>
    <label>IPS URL</label>
    <type>Url</type>
</CustomField>