unpackaged/main/default/objects/SBQQ__Quote__c/fields/Large_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Large_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box if Quote is equal to or over $1M total</description>
    <inlineHelpText>Check if total is over $1M</inlineHelpText>
    <label>Large Opportunity</label>
    <type>Checkbox</type>
</CustomField>