unpackaged/main/default/objects/SBQQ__Quote__c/fields/Lease_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Lease_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease Analysis</label>
    <type>Checkbox</type>
</CustomField>