unpackaged/main/default/objects/SBQQ__Quote__c/fields/Lease_Factor__c.field-meta.xml
<CustomField>
    <fullName>Lease_Factor__c</fullName>
    <formula>Lease_Rate__c/Building_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>