unpackaged/main/default/objects/SBQQ__Quote__c/fields/List_Price_1__c.field-meta.xml
<CustomField>
    <fullName>List_Price_1__c</fullName>
    <formula>Infleet_List_Prices_1__c +  New_List_Prices_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>