unpackaged/main/default/objects/SBQQ__Quote__c/fields/List_Price_3__c.field-meta.xml
<CustomField>
    <fullName>List_Price_3__c</fullName>
    <formula>Infleet_List_Prices_3__c +  New_List_Prices_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>