unpackaged/main/default/objects/SBQQ__Quote__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>Get the logo of the Branch or Indigenous Partnership from the parent opportunity</description>
    <formula>IF( 
   OR(
       ISBLANK(SBQQ__Opportunity2__r.Indigenous_Partnership__c),
       ISBLANK(SBQQ__Opportunity2__r.Indigenous_Partnership__r.Template_Group__c)  
     ),
     SBQQ__Opportunity2__r.Branch_Name__r.Logo_URL__c ,  SBQQ__Opportunity2__r.Indigenous_Partnership__r.Logo_URL__c )</formula>
    <inlineHelpText>Get the logo of the Branch or Indigenous Partnership from the parent opportunity</inlineHelpText>
    <label>Logo URL</label>
    <type>Text</type>
</CustomField>