unpackaged/main/default/objects/SBQQ__Quote__c/fields/Major_Project__c.field-meta.xml
<CustomField>
    <fullName>Major_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modular</label>
    <type>Checkbox</type>
</CustomField>