unpackaged/main/default/objects/SBQQ__Quote__c/fields/Managed_by_Construction_Services__c.field-meta.xml
<CustomField>
    <fullName>Managed_by_Construction_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed by Construction Services</label>
    <type>Checkbox</type>
</CustomField>