unpackaged/main/default/objects/SBQQ__Quote__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Name of the Manufacturer used for New units on the bidsheet</description>
    <inlineHelpText>Name of the Manufacturer used for New units on the bidsheet</inlineHelpText>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>