unpackaged/main/default/objects/SBQQ__Quote__c/fields/Markup_2__c.field-meta.xml
<CustomField>
    <fullName>Markup_2__c</fullName>
    <label>Markup % 2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>