unpackaged/main/default/objects/SBQQ__Quote__c/fields/Markup_3__c.field-meta.xml
<CustomField>
    <fullName>Markup_3__c</fullName>
    <label>Markup % 3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>